feat: updated schedule services